--- a/SS.html
+++ b/SS.html
@@ -36,52 +36,52 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td class="Large">We Live</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Edakk</td>
+                <td>10</td>
+                <td>8</td>
+                <td>2</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td class="Large">Lecktrik</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Desnamed</td>
+                <td>10</td>
+                <td>7</td>
+                <td>3</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td class="Large">TehSeven</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">DistinctMadness</td>
+                <td>10</td>
+                <td>5</td>
+                <td>5</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td class="Large">DistinctMadness</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Lecktrik</td>
+                <td>10</td>
+                <td>4</td>
+                <td>6</td>
             </tr>
             <tr>
-                <td>5</td>
-                <td class="Large">Lewis</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>10</td>
+                <td class="Large">We Live</td>
+                <td>10</td>
+                <td>3</td>
+                <td>7</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td class="Large">Edakk</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Lewis</td>
+                <td>5</td>
+                <td>2</td>
+                <td>3</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td class="Large">Desnamed</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">TehSeven</td>
+                <td>5</td>
+                <td>1</td>
+                <td>4</td>
             </tr>
         </table>
         <br/>
@@ -98,52 +98,52 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td class="Large">Derp</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Decard Cain</td>
+                <td>10</td>
+                <td>8</td>
+                <td>2</td>
             </tr>
             <tr>
-                <td>2</td>
-                <td class="Large">Unreal</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>5</td>
+                <td class="Large">PurpleTurkey</td>
+                <td>5</td>
+                <td>4</td>
+                <td>1</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td class="Large">Decard Cain</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Unreal</td>
+                <td>5</td>
+                <td>3</td>
+                <td>2</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td class="Large">GraphiqueNez2</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>5</td>
+                <td>2</td>
+                <td>3</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td class="Large">Roland</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Taters McShit</td>
+                <td>5</td>
+                <td>1</td>
+                <td>4</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td class="Large">Taters McShit</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Derp/td>
+                    <td>5</td>
+                    <td>1</td>
+                    <td>4</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td class="Large">PurpleTurkey</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td class="Large">Roland</td>
+                <td>5</td>
+                <td>1</td>
+                <td>4</td>
             </tr>
         </table>
     </div>
